--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
 							  <div class="carousel-item  active">
 								<div class="row">
 								  <div class="col-md-4 margin-auto">
-									<img alt="belctrans" src="images/canaletras.png">
+									<img alt="belctrans" src="images/belctrans.png">
 								  </div>          
 								  <div class="col-md-4 margin-auto">
 									<img alt="canaletras" src="images/canaletras.png">
