--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
 							  <div class="carousel-item  active">
 								<div class="row">
 								  <div class="col-md-4 margin-auto">
-									<img alt="belctrans" src="images/belctrans.png">
+									<img alt="belctrans" src="images/belct.png">
 								  </div>          
 								  <div class="col-md-4 margin-auto">
 									<img alt="canaletras" src="images/canaletras.png">
@@ -659,7 +659,7 @@
 							  <div class="carousel-item  active ">
 								<div class="row">
 								  <div class="col-sm-5 margin-auto">
-									<img alt="belctrans" src="images/belctrans.png">
+									<img alt="belctrans" src="images/belct.png">
 								  </div>          
 								  <div class="col-sm-5 margin-auto">
 									<img alt="canaletras" src="images/canaletras.png">
@@ -699,7 +699,7 @@
 							  <div class="carousel-item  active">
 								<div class="row ">
 								  <div class="col-12 text-center">
-									<img alt="belctrans" src="images/belctrans.png">
+									<img alt="belctrans" src="images/belct.png">
 								  </div>
 								</div><!--row-->
 							  </div>
