--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 				<div id="nucleo-title-aside" class="col-2 col-lg-1 p-0">
 					<div class="title-aside-wrapper">
-						<h2 class=" text-uppercase title-aside m-0 p-0 branco">o núcleo</h2>
+						<h2 class=" text-uppercase title-aside m-0 p-0 branco">núcleo</h2>
 					</div>
 				</div>
 				<!--------------------------------------- Quem Somos ----------------------------------------------->
